fix message bar overflow issue

--- a/client/src/CSS/Chat.css
+++ b/client/src/CSS/Chat.css
@@ -4,7 +4,7 @@
     background-color: var(--bg-main);
     color: var(--text-primary);
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
 }
@@ -25,7 +25,7 @@ h2 {
 
 .content-main {
     display: flex;
-    height: 100%;
+    height: 93%;
     min-width: 0;
 }
 
@@ -127,16 +127,16 @@ h2 {
 }
 
 .center-main {
+    flex: 1;
     width: 65vw;
-    height: 90%;
     background: var(--bg-chat-gradient);
     backdrop-filter: blur(12px);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     position: relative;
     overflow: hidden;
     padding: 20px;
+    min-height: 0;
 }
 
 .center-main::before {
@@ -219,6 +219,7 @@ h2 {
 }
 
 .message-bar {
+    position: sticky;
     display: flex;
     gap: 10px;
     width: 100%;
@@ -431,7 +432,7 @@ button:active {
     .heading {
         display: none;
     }
-    .center-main {
-        height: 96%;
+    .content-main {
+        height: 100%;
     }
 }
